[tool.poetry]
name = "Mountaineer"
version = "0.1.0"
description = "This is a tool to convert a 2-Dimensional Dataset to a 3-Dimensional Dataset"
authors = ["Alex Leamy <aleamy@sparkgeo.com>"]
license = "Open Source"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.4.1"}
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
